Alteracao Link wpp | Criacao de nova variant de card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,7 +59,7 @@
   --popover-foreground: oklch(0.129 0.042 264.695);
   --primary: #f3d853;
   --primary-foreground: #121214;
-  --primary-darker: #efcc1a;
+  --primary-darker: #dfbe15;
   --primary-light: #F6E179;
   --secondary: oklch(0.968 0.007 247.896);
   --secondary-foreground: oklch(0.208 0.042 265.755);
